* Implemented #013076: Browse popup: improve image preview
* Implemented #013019: Move "Enable/Disable Editor" button to OE toolbar
* Implemented #009397: Missing OE Toolbar Buttons - #1 - save and #2 - publish
* Implemented #012949: Cannot change the node of an embedded object once it has been added

5.0Beta2
* Added debug as text comment in ajax view's (embed_view, expand, load and search)
* Fixed bug #012950: Popup windows sizes are too small
* Fixed bug #012947: Cannot click search button in link properties until a filter is selected
* Fixed bug #012978: Strange symbol in Help popup
* Fixed bug #012951: Help Popup should have Help Tab content highlighted first
* Fixed bug #012948: Null result set in link dialog search tab should provide feedback
* Made ez_core only do POST ajax calls if post actually has a value
* Fixed bug #011618: Table in header tag
* Fixed bug #012953: Unable to transform column into table header column
* Fixed bug #012987: eZOE: Insert image popup, JS error in IE7 on Vista
* Fixed bug #012986: Link Properties/Browse shows 20 items per page causing overflow
* Fixed bug #012988: eZOE: Insert table size grid does not work in IE7, Vista
* search did not filter on class id in Ie caused by .postData bug in ez_core.js
* Fixed bug #010780: It's hard to add items to ClassDescription[] from content.ini.append in extensions
* Fixed bug #009558: [EmbedViewModeSettings] and [ImageDataTypeSettings] in site.ini
* cleaned up custom attribute type ini settings and added support for hidden and checkbox types
* Fixed bug #012956: Selecting of table cells doesn't work in some browsers
* Fixed bug #013037: Typo in Help popup

5.0beta
* clicking search buttons does not work (hides link dialog)
* fixed some ie6 issues in browse / search and custom tag popup
* let link / anchor buttons edit currently selected link / anchor
* Fixed table size selector styling bug in Opera
* Allow limiting AvailableClasses list based on embed class type