@@ -19,6 +19,8 @@ eZ Online Editor MCE extension Changelog
 * Implemented #013019: Move "Enable/Disable Editor" button to OE toolbar
 * Implemented #009397: Missing OE Toolbar Buttons - #1 - save and #2 - publish
 * Implemented #012949: Cannot change the node of an embedded object once it has been added
+* use span tags internally for embed-inline tags so they are truly inline
+* properly serialize from checkbox form values to attribute values and back
 
 5.0Beta2
 * Added debug as text comment in ajax view's (embed_view, expand, load and search)
